--- a/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
+++ b/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
@@ -12,4 +12,8 @@
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+  </ItemGroup>
+
 </Project>
