--- a/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
+++ b/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.10.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
     <PackageReference Include="Xamarin.Yaml.Parser" Version="1.1.9" />
   </ItemGroup>
