--- a/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
+++ b/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.10.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+    <PackageReference Include="VIEApps.Components.Utility.Epub" Version="10.2.3.1806" />
     <PackageReference Include="Xamarin.Yaml.Parser" Version="1.1.9" />
   </ItemGroup>
 
