Add pdf generation Add cover page to epub

--- a/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
+++ b/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.15.1" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
+    <PackageReference Include="OpenHtmlToPdf" Version="1.12.0" />
     <PackageReference Include="VIEApps.Components.Utility.Epub" Version="10.2.3.1806" />
     <PackageReference Include="Xamarin.Yaml.Parser" Version="1.1.9" />
   </ItemGroup>
@@ -35,6 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Resources\epub-cover-template.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\epub-template.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
