--- a/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
+++ b/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,6 +10,7 @@
     <PackageProjectUrl>https://github.com/Zod-/MarkdownConverter</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Zod-/MarkdownConverter</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
