Use DinkToPdf instead of open html to pdf

--- a/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
+++ b/src/MarkdownConverter/Implementation/MarkdownConverter.csproj
@@ -14,9 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="Markdig" Version="0.15.1" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.5" />
-    <PackageReference Include="OpenHtmlToPdf" Version="1.12.0" />
     <PackageReference Include="VIEApps.Components.Utility.Epub" Version="10.2.3.1806" />
     <PackageReference Include="YamlDotNet" Version="5.0.1" />
   </ItemGroup>
@@ -37,6 +37,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="libwkhtmltox.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="libwkhtmltox.dylib">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="libwkhtmltox.so">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\epub-cover-template.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
