--- a/Implementation/Deathworlders.MarkdownConvert.csproj
+++ b/Implementation/Deathworlders.MarkdownConvert.csproj
@@ -13,6 +13,8 @@
     <Version>0.2.0.0</Version>
     <AssemblyName>Deathworlders.MarkdownConvert</AssemblyName>
     <RootNamespace>Deathworlders.MarkdownConvert</RootNamespace>
+    <IsPackable>true</IsPackable>
+    <PackAsTool>true</PackAsTool>
   </PropertyGroup>
 
   <ItemGroup>
